sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:12: error: not found: value echanger
      if (plusPetit(i,i+1)){echanger(i,i+1)}
                            ^AlgCocktailSort2:16: error: not found: value echanger
      if(plusPetit(j,j+1)){echanger(j,j+1)}
                           ^